--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,17 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
-    <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="script-src 'self' 'unsafe-inline';"
-    />
-
-    <style>
-      html {
-        width: 800px;
-        height: 600px;
-      }
-      body {
-        width: 100%;
-        height: 100%;
-        border: 1px solid white;
-      }
-    </style>
+    <title>Screenshot</title>
   </head>
-  <body></body>
+
+  <body>
+    <div class="window">
+      <label id="screenshot-path">Path:</label>
+      <button id="screenshot" class="btn btn-primary">Take Screenshot</button>
+    </div>
+  </body>
+
+  <script>
+    require('./renderer.js');
+  </script>
 </html>
