--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,78 @@
   <head>
     <meta charset="UTF-8" />
     <title>Screenshot</title>
+    <style>
+      body {
+        margin: auto;
+        width: 90%;
+      }
+      #container {
+        width: 100%;
+        height: 60px;
+        display: flex;
+        flex-direction: row;
+        margin: 0 20px;
+        border: 2px solid rgb(19, 19, 19);
+        box-shadow: 0 8px 6px -6px black;
+        background-color: rgb(189, 189, 189);
+      }
+      #progress-container {
+        height: inherit;
+        flex-grow: 1;
+        margin-bottom: 1em;
+        position: relative;
+      }
+      #indicator-container {
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        position: absolute;
+        left: 0;
+        top: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      #indicator {
+        white-space: pre-line;
+        color: #fff;
+        line-height: 1;
+      }
+      #progress {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        border: none;
+        background-size: auto;
+        height: inherit;
+        width: 100%;
+      }
+      #progress::-webkit-progress-value {
+        background: #0abde3;
+        animation: bar-fill 0.5s;
+      }
+      #screenshot-btn {
+        height: inherit;
+        width: 160px;
+        background: #10ac84;
+        color: #fff;
+        border: none;
+        border-left: 2px solid rgb(19, 19, 19);
+      }
+    </style>
   </head>
 
   <body>
-    <div class="window">
-      <label id="screenshot-path">Path:</label>
-      <button id="screenshot" class="btn btn-primary">Take Screenshot</button>
+    <div id="container">
+      <div id="progress-container">
+        <div id="indicator-container">
+          <span id="indicator">Click button to screenshot</span>
+        </div>
+        <progress id="progress" max="100" value="0"> </progress>
+      </div>
+      <button id="screenshot-btn">
+        Take Screenshot
+      </button>
     </div>
   </body>
 
