:sparkles: add screenshot capture

--- a/src/screen-capturer/index.html
+++ b/src/screen-capturer/index.html
@@ -122,6 +122,23 @@
         bottom: -5px;
         right: -5px;
       }
+
+      /** buttons */
+      .button-wrapper {
+        position: absolute;
+        bottom: -30px;
+        right: 0;
+        height: 20px;
+      }
+
+      .button-wrapper button {
+        height: 20px;
+      }
+
+      .button-wrapper canvas {
+        height: 100%;
+        width: 100%;
+      }
     </style>
   </head>
 
